<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="ygl.com.yglapp.Activity.LoginActivityExample">

    <!-- <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:scaleType="centerInside"
        android:src="@drawable/ygl_logo_white" />-->


    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            fontPath="fonts/tahoma.ttf"
            android:text="Connexion"
            android:textStyle="bold"
            android:textSize="40dp"
            android:textColor="@android:color/white"/>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textColorHint="@android:color/white"
            >

            <AutoCompleteTextView
                android:id="@+id/pseudo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                fontPath="fonts/tahoma.ttf"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:textColorHint="@android:color/white"
            android:padding="20dp"
            android:layout_height="wrap_content">


            <AutoCompleteTextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Mot de passe"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:imeActionId="@+id/login"
                android:imeActionLabel="signer pas"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/validate_selector"
            android:text="Se connecter"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold" />


    </LinearLayout>

    <ImageView
        android:id="@+id/image_view_loader"
        android:layout_width="120dp"
        android:layout_height="20dp"
        android:background="#FF0000"
        android:visibility="gone"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"/>


    <!--


    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:visibility="gone" />

    -->



    <fragment
        android:id="@+id/form_candidat_fragment"
        android:name="ygl.com.yglapp.FormCandidatFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        />

</LinearLayout>
